2000-12-04 John R. Jackson  <jrj@purdue.edu>

	* server-src/conffile.c (read_conffile_recursively): If the file name
	  for the includefile directive is not absolute, make it relative to
	  the configuration directory.

2000-12-03 John R. Jackson  <jrj@purdue.edu>

	* restore-src/amrestore.c: Fix header when compression is included.
	  Use "fast" option for -c and add new -C option to get "best".
	* man/amrestore.8: Document the new option, the compression level,
	  and clean up some nroff issues.

2000-11-25  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* Amanda 2.4.2 released
	
2000-11-22 John R. Jackson  <jrj@purdue.edu>

	* contrib/dbbackup.ksh: Deal with adm being a symlink.
	* contrib/dbbackup.tcl: Update for Tcl 8.3 and newer Oratcl versions.

2000-11-22 John R. Jackson  <jrj@purdue.edu>

	* Makefile.am: Forgot to add contrib/sst/README.Amanda to the list
	  of files to put in a distribution.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* recover-src/extract_list.c (extract_files_child): Add support for
	  XFSRESTORE.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* server-src/amcheck.c: Minor message wording changes.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* configure.in: Forgot to check in this part of new amgetconf.8.in.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* contrib/sst/README.Amanda: New file of Amanda specific sst notes.
	* contrib/sst/sst.c: Attempt at letting gcc compile sst.

2000-11-21 John R. Jackson  <jrj@purdue.edu>

	* man/amgetconf.8.in: New man page.
	* man/Makefile.am: Add support for amgetconf.8.in.
	* man/amadmin.8.in: Update for 2.4.2 and do general cleanup.
	* man/amanda.8.in: Ditto.
	* man/amcheck.8.in: Ditto.
	* man/amcheckdb.8.in: Ditto.
	* man/amcleanup.8.in: Ditto.
	* man/amdump.8.in: Ditto.
	* man/amflush.8.in: Ditto.
	* man/amlabel.8.in: Ditto.
	* man/amrecover.8.in: Ditto.
	* man/amreport.8.in: Ditto.
	* man/amrestore.8: Ditto.
	* man/amrmtape.8.in: Ditto.
	* man/amstatus.8.in: Ditto.